magic color update for contrast issue

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,7 +6,7 @@
     --bg-clr-2: rgb(255,255,255);
     --text-clr: #111;
     --shadow-clr: rgb(0,0,0,0.3);
-    --magic-clr: #2aa175;
+    --magic-clr: #4e966e;
     --hr-secondary: rgb(0,0,0,0.5);
     --detailGroupBoxBg: #b6b6b6;
     --detailGroupBoxBgHover: #bdbdbd;
